[정은선]  #3 <<사용자>>  로그인 입력 유효성 검사 완료 / 로그인 정보 조회해서 로그인 기능 완성   #5 <<관리자>>  로그인 입력 유효성 검사 완료 / 로그인 정보 조회해서 로그인 기능 완성

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -382,6 +382,9 @@ nav {
 }
 
 /* manager - login.jsp */
+.manager-login-box-button-box {
+	margin-top: 10px;
+}
 .link-join-manager {
 	width: 350px;
 	height: 40px;
