--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -455,7 +455,13 @@ nav {
 	margin-bottom: 10px;
 }
 
+.qpost-secret {
+	margin-top:10px
+}
+
 .qpost-password {
+	display: none;
+	margin-left: 20px;
 	width: 350px;
 	height: 35px;
 }
@@ -487,7 +493,6 @@ nav {
 
 /* qpost-list jsp */
 .qpost-list-box {
-	height: 800px;
 	margin-top: 40px;
 	margin-bottom: 20px;
 	padding: 50px;
@@ -510,7 +515,7 @@ nav {
 }
 
 .input-qpost-search {
-	width: 200px;
+	width: 300px;
 	height: 30px;
 }
 
