--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -456,7 +456,7 @@ nav {
 }
 
 .qpost-secret {
-	margin-top:10px
+	margin-top: 10px
 }
 
 .qpost-password {
@@ -579,6 +579,12 @@ nav {
 	justify-content: center;
 }
 
+.qpost-detail-logo {
+	font-size: 35px;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+
 .qpost-detail-box {
 	width: 1000px;
 	padding: 50px;
@@ -641,6 +647,25 @@ nav {
 }
 
 .button-qpost-modify {
+	color: white;
+	font-size: 17px;
+	background-color: seagreen;
+	text-decoration: none;
+	width: 100px;
+	height: 40px;
+}
+
+/* manager-detail jsp */
+.button-answer-modify {
+	color: white;
+	font-size: 17px;
+	background-color: indianred;
+	text-decoration: none;
+	width: 100px;
+	height: 40px;
+}
+
+.button-qpost-answer {
 	color: white;
 	font-size: 17px;
 	background-color: seagreen;
