[정은선] #11 사용자 정보 수정 기능 완성

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -58,6 +58,14 @@ header {
 	font-size: 20px;
 }
 
+.header-logout-myInfo {
+	display: flex;
+	justify-content: end;
+}
+
+.header-myInfo {
+	margin-left: 30px;
+}
 
 /* nav */
 nav {
