--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -789,8 +789,13 @@ nav {
 	margin-top: 10px;
 }
 
-
-
+/* manager - qpostDetail */
+.qpost-answer-file {
+	margin-left: 240px;
+	margin-bottom: 10px;
+	width: 40%;
+	height: 50%;
+}
 
 
 
