--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1158,17 +1158,23 @@ nav {
 }
 
 /* private survey */
+.print-icon {
+	margin-top: 35px;
+}
+#printIcon{
+	margin-left: 1020px;
+	font-size: 25px;
+}
 .online-survey-box-center {
 	display: flex;
 	justify-content: center;
-	margin-top: 30px;
 	margin-bottom: 30px;
 }
 
 .online-survey-box {
 	border: 1px solid black;
 	width: 600px;
-	height: 750px;
+	height: 810px;
 	padding: 3%;
 }
 
