[정은선] #20 문진표 기반으로 치과추천 기능 구현 중 - 파라미터값 전달?

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1195,6 +1195,23 @@ nav {
 	margin-left: 870px;
 }
 
+/* dentalClinic List */
+.dentalClinic-box-center{
+	display: flex;
+	justify-content: center;
+}
+.dentalClinic-box {
+	border: 1px black solid;
+	width: 1100px;
+	height: 800px;
+	margin-top: 50px;
+	margin-bottom: 40px;
+	padding: 40px;
+}
+.dentalClinic-text {
+	font-size: 40px;
+	margin-bottom: 20px;
+}
 /* survey - start */
 .survey-start-box-center {
 	display: flex;
