[정은선] #20 사적인 구강관리 완성 - 추가 조건들 걸어주기

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1178,7 +1178,6 @@ nav {
 .online-survey-box {
 	border: 1px solid black;
 	width: 600px;
-	height: 720px;
 	padding: 3%;
 }
 
@@ -1186,6 +1185,14 @@ nav {
 	font-size: 40px;
 	font-weight: 600;
 	margin-bottom: 20px;
+}
+
+.northLocation {
+	display: none;
+}
+
+.southLocation {
+	display: none;
 }
 
 .button-private-survey {
